<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rezalwp.PresensiAcara.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_presence"
        android:name="com.rezalwp.PresensiAcara.activity.ui.presence.PresenceFragment"
        android:label="@string/title_presence"
        tools:layout="@layout/fragment_presence" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rezalwp.PresensiAcara.activity.ui.tambahUser.TambahUserFragment"
        android:label="@string/title_tambah_user"
        tools:layout="@layout/fragment_tambah_user" />
</navigation>
