<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/app_name_full"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ketarangan_value"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nama"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_pembuat"
                android:textColor="@android:color/black"
                android:scrollbarSize="15dp"
                android:textSize="15sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/npm"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npm_pembuat"
                android:textColor="@android:color/black"
                android:scrollbarSize="15dp"
                android:textSize="15sp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryWhite"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/cara_kerja"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cara_kerja_value"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_weight="1" />
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/website"
                android:textSize="15sp"
                android:id="@+id/btn_website" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/api"
                android:textSize="15sp"
                android:id="@+id/btn_api" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>