<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv_training_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:text="@string/nama"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/tv_nama_peserta"
                    android:background="@color/colorPrimary" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/noHp"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/noHp"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_noHp_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/kategori"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kategori"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_kategori_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/institut"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/institut"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_institut_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/noTiket"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/noTiket"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_noTiket_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/idPanitia"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/idPanitia"
                            android:textColor="@android:color/black"
                            android:scrollbarSize="15dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_idPanitia_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/tglInput"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tglInput"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:scrollbarSize="15dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_tglInput_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/waktu"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktu"
                            android:textColor="@android:color/black"
                            android:scrollbarSize="15dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_waktu_peserta" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/presence"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/presence"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:scrollbarSize="15dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_presensi_peserta" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/container_delete">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_delete"
                    android:text="@string/delete"
                    android:background="@android:color/holo_red_dark"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>