<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_presence"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
            android:background="@color/colorPrimaryWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nama"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:id="@+id/tv_nama_peserta" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/noTiket"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noTiket"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:id="@+id/tv_noTiket_peserta" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/presence"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presence"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:scrollbarSize="15dp"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:id="@+id/tv_presensi_peserta" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:id="@+id/batas"
            android:background="@color/colorThirty"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/container_datang"
            android:visibility="gone">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_datang"
                android:text="Datang"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>